# venmo-auto-cashout

./: .gitignore  .tool-versions  Dockerfile  README.md  dockerStart.sh  docker_entrypoint.sh  execute.sh  main.py  mise.toml  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  lint.yml
venmo_auto_cashout/: __init__.py  __main__.py  cli.py  lunchmoney.py  transaction.py  venmo.py
