[project]
name = "venmo-auto-cashout"
version = "1.0"
description = "A tool to automatically cash out your Venmo balance"
authors = [
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = [
    "sentry-sdk~=1.5",
    "lunchable>=0.8.2",
    "venmo-api-unofficial @ https://github.com/evanpurkhiser/venmo-api-unofficial/archive/3e290a575ac2f638cc82a3d1a1580bf41bf503aa.tar.gz",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/evanpurkhiser/venmo-auto-cashout"

[project.scripts]
venmo-auto-cashout = "venmo_auto_cashout:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length=100
target-version=['py39']

[tool.isort]
profile = "black"
line_length = 100
lines_between_sections = 1
skip = "migrations"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.7.0",
]
