[project]
name = "venmo-auto-cashout"
version = "1.0"
description = "A tool to automatically cash out your Venmo balance"
authors = [
    {name = "Evan Purkhiser", email = "evanpurkhiser@gmail.com"},
]
dependencies = [
    "sentry-sdk~=1.5",
    "lunchable>=0.8.2",
    "venmo-api-unoffical @ https://github.com/evanpurkhiser/venmo-api-unofficial/archive/3e290a575ac2f638cc82a3d1a1580bf41bf503aa.tar.gz",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/evanpurkhiser/venmo-auto-cashout"

[project.scripts]
venmo-auto-cashout = "venmo_auto_cashout:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["venmo_auto_cashout"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-between-types = 0
